--- a/SSVEP/load/load_multi_avi.ipynb
+++ b/SSVEP/load/load_multi_avi.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "id": "e039a02b-cc6c-41c2-8fc4-a1b3aed9ea5e",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "id": "188d648c-c12e-4c06-88dc-c3e9d9ca614e",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "id": "cfc13ae1-2950-4b0a-9cc3-fc88dcae87d3",
    "metadata": {},
    "outputs": [
@@ -88,10 +88,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "id": "cd5cb212-faf2-4039-94c0-d523ae4260d7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([7.5, 8.2, 7. , 8.2, 6. , 7.5, 6. , 6. , 8.2, 8.2, 9.3, 6. , 6. ,\n",
+       "       8.2, 6. , 6.5, 7.5, 7. , 6. , 6. , 7.5, 8.2, 7. , 8.2, 6. , 7.5,\n",
+       "       6. , 6. , 8.2, 8.2, 9.3, 6. , 6. , 8.2, 6. , 6.5, 7.5, 7. , 6. ,\n",
+       "       6. , 7.5, 8.2, 7. , 8.2, 6. , 7.5, 6. , 6. , 8.2, 8.2, 9.3, 6. ,\n",
+       "       6. , 8.2, 6. , 6.5, 7.5, 7. , 6. , 6. , 7.5, 8.2, 7. , 8.2, 6. ,\n",
+       "       7.5, 6. , 6. , 8.2, 8.2, 9.3, 6. , 6. , 8.2, 6. , 6.5, 7.5, 7. ,\n",
+       "       6. , 6. , 7.5, 8.2, 7. , 8.2, 6. , 7.5, 6. , 6. , 8.2, 8.2, 9.3,\n",
+       "       6. , 6. , 8.2, 6. , 6.5, 7.5, 7. , 6. , 6. ])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Mudando o formato de X\n",
     "X_transposed = np.array([np.transpose(data) for data in X])\n",
@@ -99,7 +117,8 @@
     "X_transposed.shape\n",
     "\n",
     "y_transposed = np.array([np.transpose(data) for data in y])\n",
-    "y_transposed = y_transposed.reshape(1, y_transposed.shape[0]*y_transposed.shape[1])[0]"
+    "y_transposed = y_transposed.reshape(1, y_transposed.shape[0]*y_transposed.shape[1])[0]\n",
+    "y_transposed"
    ]
   },
   {
