--- a/SSVEP/load/load_single_avi.ipynb
+++ b/SSVEP/load/load_single_avi.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 17,
    "id": "7f86392c-d169-4703-892d-0e78f25e7572",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 18,
    "id": "82f836d0-9ba2-47ee-8d9a-7340949a6db2",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 19,
    "id": "bf9cc385-02ed-4db0-84d1-95327166bbee",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 20,
    "id": "2d277758-8928-4783-ae4a-150833129f42",
    "metadata": {},
    "outputs": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 21,
    "id": "c7059d6b-0e02-49ac-aeac-cc224496626e",
    "metadata": {},
    "outputs": [
@@ -100,7 +100,7 @@
        "((15360, 21), (1, 21))"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 22,
    "id": "56beede1-995e-4518-bec5-4ed7e32500a1",
    "metadata": {},
    "outputs": [
@@ -124,7 +124,7 @@
        "((15360, 21), (1, 21))"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 23,
    "id": "7f9c0173-d335-43a3-8aa2-a838c4555900",
    "metadata": {},
    "outputs": [],
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 24,
    "id": "e343d6f1-142e-4472-a79c-ddf29ab03f78",
    "metadata": {},
    "outputs": [
@@ -162,7 +162,7 @@
        "(4, 15360, 21)"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 25,
    "id": "704180a0-de9a-4e4e-9e98-f9658fdd51fa",
    "metadata": {},
    "outputs": [
@@ -184,7 +184,7 @@
        "(4, 1, 21)"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 26,
    "id": "85950856-3e19-44eb-868e-a77b789cad6c",
    "metadata": {},
    "outputs": [
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 27,
    "id": "e5731c9a-c4bd-4eb2-aae5-8694fc3f12f4",
    "metadata": {},
    "outputs": [],
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 28,
    "id": "2c16e0c9-93d9-4da0-9311-2a9e85a7d489",
    "metadata": {},
    "outputs": [
@@ -256,7 +256,7 @@
        "(84, 15360)"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,14 +270,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 29,
+   "id": "0992a262-9f8f-4d07-b19f-b30260adf5c8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([10. , 10. , 10. ,  6.5,  6.5,  6.5,  6. ,  6. ,  6. ,  7.5,  7.5,\n",
+       "        7.5,  7. ,  7. ,  7. ,  8.2,  8.2,  8.2,  9.3,  9.3,  9.3, 10. ,\n",
+       "       10. , 10. ,  6.5,  6.5,  6.5,  6. ,  6. ,  6. ,  7.5,  7.5,  7.5,\n",
+       "        7. ,  7. ,  7. ,  8.2,  8.2,  8.2,  9.3,  9.3,  9.3, 10. , 10. ,\n",
+       "       10. ,  6.5,  6.5,  6.5,  6. ,  6. ,  6. ,  7.5,  7.5,  7.5,  7. ,\n",
+       "        7. ,  7. ,  8.2,  8.2,  8.2,  9.3,  9.3,  9.3, 10. , 10. , 10. ,\n",
+       "        6.5,  6.5,  6.5,  6. ,  6. ,  6. ,  7.5,  7.5,  7.5,  7. ,  7. ,\n",
+       "        7. ,  8.2,  8.2,  8.2,  9.3,  9.3,  9.3])"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_combined = np.concatenate(y)\n",
+    "\n",
+    "y_combined = np.concatenate(y)\n",
+    "y_transposed = np.array([np.transpose(data) for data in y_combined])\n",
+    "y_transposed = y_transposed.reshape(1, -1)[0]\n",
+    "\n",
+    "y_transposed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "id": "910ef7f8-1af8-4b80-892c-807aaaabaddf",
    "metadata": {},
    "outputs": [],
    "source": [
     "np.save(\"../datasets/avi/single/data_single.npy\", X_transposed)\n",
-    "y_combined = np.concatenate(y)\n",
-    "np.save(\"../datasets/avi/single/labels_single.npy\", y)"
+    "\n",
+    "np.save(\"../datasets/avi/single/labels_single.npy\", y_transposed)"
    ]
   }
  ],
