--- a/SSVEP/load/load_beta_s5.ipynb
+++ b/SSVEP/load/load_beta_s5.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "id": "533c8de4-305b-49b4-836f-b35ee66b689a",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 12,
    "id": "d644b39f-c155-4837-93f3-1b7b55daf243",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 13,
    "id": "6cfd86f9-c670-4f70-a4a8-85f6db180754",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 14,
    "id": "d3c5ef7d-a204-4ae3-b587-0a1d9bb4834e",
    "metadata": {},
    "outputs": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 15,
    "id": "87f001c2-2e57-4e38-8c0d-e776149499c1",
    "metadata": {},
    "outputs": [
@@ -84,13 +84,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(4, 40, 64, 750)\n"
+      "(160, 64, 750)\n"
      ]
     }
    ],
    "source": [
     "# Mudando o formato de X\n",
     "X_transposed = np.array(np.transpose(X,  (2, 3, 0, 1)))\n",
+    "X_transposed = X_transposed.reshape(X_transposed.shape[0] *X_transposed.shape[1], X_transposed.shape[2], X_transposed.shape[3])\n",
     "\n",
     "# Verificar a nova forma de X\n",
     "print(X_transposed.shape)"
@@ -98,13 +99,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 16,
+   "id": "d88cb26c-b9ea-4737-a38b-15408495a82b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 8.6,  8.8,  9. ,  9.2,  9.4,  9.6,  9.8, 10. , 10.2, 10.4, 10.6,\n",
+       "       10.8, 11. , 11.2, 11.4, 11.6, 11.8, 12. , 12.2, 12.4, 12.6, 12.8,\n",
+       "       13. , 13.2, 13.4, 13.6, 13.8, 14. , 14.2, 14.4, 14.6, 14.8, 15. ,\n",
+       "       15.2, 15.4, 15.6, 15.8,  8. ,  8.2,  8.4,  8.6,  8.8,  9. ,  9.2,\n",
+       "        9.4,  9.6,  9.8, 10. , 10.2, 10.4, 10.6, 10.8, 11. , 11.2, 11.4,\n",
+       "       11.6, 11.8, 12. , 12.2, 12.4, 12.6, 12.8, 13. , 13.2, 13.4, 13.6,\n",
+       "       13.8, 14. , 14.2, 14.4, 14.6, 14.8, 15. , 15.2, 15.4, 15.6, 15.8,\n",
+       "        8. ,  8.2,  8.4,  8.6,  8.8,  9. ,  9.2,  9.4,  9.6,  9.8, 10. ,\n",
+       "       10.2, 10.4, 10.6, 10.8, 11. , 11.2, 11.4, 11.6, 11.8, 12. , 12.2,\n",
+       "       12.4, 12.6, 12.8, 13. , 13.2, 13.4, 13.6, 13.8, 14. , 14.2, 14.4,\n",
+       "       14.6, 14.8, 15. , 15.2, 15.4, 15.6, 15.8,  8. ,  8.2,  8.4,  8.6,\n",
+       "        8.8,  9. ,  9.2,  9.4,  9.6,  9.8, 10. , 10.2, 10.4, 10.6, 10.8,\n",
+       "       11. , 11.2, 11.4, 11.6, 11.8, 12. , 12.2, 12.4, 12.6, 12.8, 13. ,\n",
+       "       13.2, 13.4, 13.6, 13.8, 14. , 14.2, 14.4, 14.6, 14.8, 15. , 15.2,\n",
+       "       15.4, 15.6, 15.8,  8. ,  8.2,  8.4])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_transposed = np.array([np.transpose(data) for data in y]*4)\n",
+    "y_transposed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "id": "e383a99c-e26a-49f7-8865-136f6a57009f",
    "metadata": {},
    "outputs": [],
    "source": [
     "np.save(\"../datasets/beta/data.npy\", X_transposed)\n",
-    "np.save(\"../datasets/beta/labels.npy\", y)"
+    "np.save(\"../datasets/beta/labels.npy\", y_transposed)"
    ]
   }
  ],
