--- a/SSVEP/classificador/classifier_per_freq_beta.ipynb
+++ b/SSVEP/classificador/classifier_per_freq_beta.ipynb
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +193,15 @@
       " 10.8 11.  11.2 11.4 11.6 11.8 12.  12.2 12.4 12.6 12.8 13.  13.2 13.4\n",
       " 13.6 13.8 14.  14.2 14.4 14.6 14.8 15.  15.2 15.4 15.6 15.8] \n",
       "\n",
-      "(160, 40) (160,)\n"
+      "(160, 40) (160,)\n",
+      "[[ 1  1  1 ...  1  1  1]\n",
+      " [51 51 51 ... 51 51 51]\n",
+      " [22 22 22 ... 22 22 22]\n",
+      " ...\n",
+      " [51 51 51 ... 51 51 51]\n",
+      " [33 33 33 ... 33 33 33]\n",
+      " [43 43 43 ... 43 43 43]]\n",
+      "160\n"
      ]
     },
     {
@@ -203,8 +211,8 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\anaca\\OneDrive\\Documentos\\GitHub\\ssvep\\SSVEP\\classificador\\classifier_per_freq_beta.ipynb Cell 7\u001b[0m line \u001b[0;36m1\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/anaca/OneDrive/Documentos/GitHub/ssvep/SSVEP/classificador/classifier_per_freq_beta.ipynb#W6sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m \u001b[39m# classificação pelo \"voto\" do maior valor\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/anaca/OneDrive/Documentos/GitHub/ssvep/SSVEP/classificador/classifier_per_freq_beta.ipynb#W6sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m i_max \u001b[39m=\u001b[39m max_values\u001b[39m.\u001b[39margmax(axis\u001b[39m=\u001b[39m\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m)\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/anaca/OneDrive/Documentos/GitHub/ssvep/SSVEP/classificador/classifier_per_freq_beta.ipynb#W6sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m hits \u001b[39m=\u001b[39m [\u001b[39m1\u001b[39;49m \u001b[39mfor\u001b[39;49;00m i \u001b[39min\u001b[39;49;00m \u001b[39mrange\u001b[39;49m(\u001b[39mlen\u001b[39;49m(i_max)) \u001b[39mif\u001b[39;49;00m targets[i_max[i][\u001b[39m0\u001b[39;49m]] \u001b[39m==\u001b[39;49m y[i]]\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/anaca/OneDrive/Documentos/GitHub/ssvep/SSVEP/classificador/classifier_per_freq_beta.ipynb#W6sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m acc \u001b[39m=\u001b[39m \u001b[39m100\u001b[39m \u001b[39m*\u001b[39m \u001b[39msum\u001b[39m(hits) \u001b[39m/\u001b[39m \u001b[39mlen\u001b[39m(y)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/anaca/OneDrive/Documentos/GitHub/ssvep/SSVEP/classificador/classifier_per_freq_beta.ipynb#W6sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39mPorcentagem de acerto: \u001b[39m\u001b[39m{\u001b[39;00macc\u001b[39m:\u001b[39;00m\u001b[39m.2f\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m%\u001b[39m\u001b[39m'\u001b[39m)\n",
-      "\u001b[1;32mc:\\Users\\anaca\\OneDrive\\Documentos\\GitHub\\ssvep\\SSVEP\\classificador\\classifier_per_freq_beta.ipynb Cell 7\u001b[0m line \u001b[0;36m1\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/anaca/OneDrive/Documentos/GitHub/ssvep/SSVEP/classificador/classifier_per_freq_beta.ipynb#W6sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m \u001b[39m# classificação pelo \"voto\" do maior valor\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/anaca/OneDrive/Documentos/GitHub/ssvep/SSVEP/classificador/classifier_per_freq_beta.ipynb#W6sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m i_max \u001b[39m=\u001b[39m max_values\u001b[39m.\u001b[39margmax(axis\u001b[39m=\u001b[39m\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m)\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/anaca/OneDrive/Documentos/GitHub/ssvep/SSVEP/classificador/classifier_per_freq_beta.ipynb#W6sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m hits \u001b[39m=\u001b[39m [\u001b[39m1\u001b[39m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(i_max)) \u001b[39mif\u001b[39;00m targets[i_max[i][\u001b[39m0\u001b[39;49m]] \u001b[39m==\u001b[39m y[i]]\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/anaca/OneDrive/Documentos/GitHub/ssvep/SSVEP/classificador/classifier_per_freq_beta.ipynb#W6sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m acc \u001b[39m=\u001b[39m \u001b[39m100\u001b[39m \u001b[39m*\u001b[39m \u001b[39msum\u001b[39m(hits) \u001b[39m/\u001b[39m \u001b[39mlen\u001b[39m(y)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/anaca/OneDrive/Documentos/GitHub/ssvep/SSVEP/classificador/classifier_per_freq_beta.ipynb#W6sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39mPorcentagem de acerto: \u001b[39m\u001b[39m{\u001b[39;00macc\u001b[39m:\u001b[39;00m\u001b[39m.2f\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m%\u001b[39m\u001b[39m'\u001b[39m)\n",
+      "\u001b[1;32mc:\\Users\\anaca\\OneDrive\\Documentos\\GitHub\\ssvep\\SSVEP\\classificador\\classifier_per_freq_beta.ipynb Cell 7\u001b[0m line \u001b[0;36m1\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/anaca/OneDrive/Documentos/GitHub/ssvep/SSVEP/classificador/classifier_per_freq_beta.ipynb#W6sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mlen\u001b[39m(i_max))\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/anaca/OneDrive/Documentos/GitHub/ssvep/SSVEP/classificador/classifier_per_freq_beta.ipynb#W6sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m \u001b[39m# classificação pelo \"voto\" do maior valor\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/anaca/OneDrive/Documentos/GitHub/ssvep/SSVEP/classificador/classifier_per_freq_beta.ipynb#W6sZmlsZQ%3D%3D?line=18'>19</a>\u001b[0m hits \u001b[39m=\u001b[39m [\u001b[39m1\u001b[39;49m \u001b[39mfor\u001b[39;49;00m i \u001b[39min\u001b[39;49;00m \u001b[39mrange\u001b[39;49m(\u001b[39mlen\u001b[39;49m(i_max)) \u001b[39mif\u001b[39;49;00m targets[i_max[i][\u001b[39m0\u001b[39;49m]] \u001b[39m==\u001b[39;49m y[i]]\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/anaca/OneDrive/Documentos/GitHub/ssvep/SSVEP/classificador/classifier_per_freq_beta.ipynb#W6sZmlsZQ%3D%3D?line=19'>20</a>\u001b[0m acc \u001b[39m=\u001b[39m \u001b[39m100\u001b[39m \u001b[39m*\u001b[39m \u001b[39msum\u001b[39m(hits) \u001b[39m/\u001b[39m \u001b[39mlen\u001b[39m(y)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/anaca/OneDrive/Documentos/GitHub/ssvep/SSVEP/classificador/classifier_per_freq_beta.ipynb#W6sZmlsZQ%3D%3D?line=20'>21</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39mPorcentagem de acerto: \u001b[39m\u001b[39m{\u001b[39;00macc\u001b[39m:\u001b[39;00m\u001b[39m.2f\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m%\u001b[39m\u001b[39m'\u001b[39m)\n",
+      "\u001b[1;32mc:\\Users\\anaca\\OneDrive\\Documentos\\GitHub\\ssvep\\SSVEP\\classificador\\classifier_per_freq_beta.ipynb Cell 7\u001b[0m line \u001b[0;36m1\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/anaca/OneDrive/Documentos/GitHub/ssvep/SSVEP/classificador/classifier_per_freq_beta.ipynb#W6sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mlen\u001b[39m(i_max))\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/anaca/OneDrive/Documentos/GitHub/ssvep/SSVEP/classificador/classifier_per_freq_beta.ipynb#W6sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m \u001b[39m# classificação pelo \"voto\" do maior valor\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/anaca/OneDrive/Documentos/GitHub/ssvep/SSVEP/classificador/classifier_per_freq_beta.ipynb#W6sZmlsZQ%3D%3D?line=18'>19</a>\u001b[0m hits \u001b[39m=\u001b[39m [\u001b[39m1\u001b[39m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(i_max)) \u001b[39mif\u001b[39;00m targets[i_max[i][\u001b[39m0\u001b[39;49m]] \u001b[39m==\u001b[39m y[i]]\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/anaca/OneDrive/Documentos/GitHub/ssvep/SSVEP/classificador/classifier_per_freq_beta.ipynb#W6sZmlsZQ%3D%3D?line=19'>20</a>\u001b[0m acc \u001b[39m=\u001b[39m \u001b[39m100\u001b[39m \u001b[39m*\u001b[39m \u001b[39msum\u001b[39m(hits) \u001b[39m/\u001b[39m \u001b[39mlen\u001b[39m(y)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/anaca/OneDrive/Documentos/GitHub/ssvep/SSVEP/classificador/classifier_per_freq_beta.ipynb#W6sZmlsZQ%3D%3D?line=20'>21</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39mPorcentagem de acerto: \u001b[39m\u001b[39m{\u001b[39;00macc\u001b[39m:\u001b[39;00m\u001b[39m.2f\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m%\u001b[39m\u001b[39m'\u001b[39m)\n",
       "\u001b[1;31mIndexError\u001b[0m: index 51 is out of bounds for axis 0 with size 40"
      ]
     }
@@ -223,8 +231,11 @@
     "# Verifique as dimensões dos arrays\n",
     "print(i_max.shape, y.shape)\n",
     "\n",
+    "print(i_max)\n",
+    "\n",
+    "print(len(i_max))\n",
+    "\n",
     "# classificação pelo \"voto\" do maior valor\n",
-    "i_max = max_values.argmax(axis=-1)\n",
     "hits = [1 for i in range(len(i_max)) if targets[i_max[i][0]] == y[i]]\n",
     "acc = 100 * sum(hits) / len(y)\n",
     "print(f'\\nPorcentagem de acerto: {acc:.2f}%')"
