--- a/SSVEP/classificador/classifier_per_freq_multi.ipynb
+++ b/SSVEP/classificador/classifier_per_freq_multi.ipynb
@@ -29,14 +29,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Reading C:\\Users\\anaca\\OneDrive\\Documentos\\GitHub\\ssvep\\SSVEP\\classificador\\..\\preprocessing_multi\\avi_multitarget.fif ...\n",
+      "Reading c:\\Users\\anaca\\OneDrive\\Documentos\\GitHub\\ssvep\\SSVEP\\classificador\\..\\preprocessing_multi\\avi_multitarget.fif ...\n",
       "Isotrak not found\n",
       "    Found the data of interest:\n",
       "        t =       0.00 ...   15998.05 ms\n",
@@ -51,7 +51,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\anaca\\AppData\\Local\\Temp\\ipykernel_1064\\1600408532.py:4: RuntimeWarning: This filename (../preprocessing_multi/avi_multitarget.fif) does not conform to MNE naming conventions. All epochs files should end with -epo.fif, -epo.fif.gz, _epo.fif or _epo.fif.gz\n",
+      "C:\\Users\\anaca\\AppData\\Local\\Temp\\ipykernel_17268\\1600408532.py:4: RuntimeWarning: This filename (../preprocessing_multi/avi_multitarget.fif) does not conform to MNE naming conventions. All epochs files should end with -epo.fif, -epo.fif.gz, _epo.fif or _epo.fif.gz\n",
       "  data = mne.read_epochs(\"../preprocessing_multi/avi_multitarget.fif\")\n"
      ]
     }
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,7 @@
        " '9.3': 5>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +190,7 @@
        "(100, 6)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -218,6 +218,9 @@
       " 6.  6.5 7.5 7.  6.  6.  7.5 8.2 7.  8.2 6.  7.5 6.  6.  8.2 8.2 9.3 6.\n",
       " 6.  8.2 6.  6.5 7.5 7.  6.  6.  7.5 8.2 7.  8.2 6.  7.5 6.  6.  8.2 8.2\n",
       " 9.3 6.  6.  8.2 6.  6.5 7.5 7.  6.  6. ] (100,) [6.0, 6.5, 7.0, 7.5, 8.2, 9.3]\n",
+      "[3 4 2 0 0 3 0 0 4 1 4 0 0 4 0 0 3 1 0 0 3 4 2 4 0 3 0 0 4 4 5 0 0 4 0 1 3\n",
+      " 2 0 0 3 4 4 4 2 2 2 4 4 4 1 2 0 2 2 2 2 2 2 2 3 4 2 4 0 3 0 0 4 4 5 0 0 4\n",
+      " 0 1 3 2 0 0 3 4 2 1 0 2 0 0 4 4 5 0 0 4 0 1 3 1 0 2]\n",
       "\n",
       "Porcentagem de acerto: 78.00%\n"
      ]
@@ -233,10 +236,18 @@
     "\n",
     "# classificação pelo \"voto\" do maior valor\n",
     "i_max = max_values.argmax(axis=-1)\n",
+    "print(i_max)\n",
     "hits = [1 for i in range(len(i_max)) if targets[i_max[i]] == y[i]]\n",
     "acc = 100 * sum(hits) / len(y)\n",
     "print(f'\\nPorcentagem de acerto: {acc:.2f}%')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
