--- a/SSVEP/classificador/classifier_per_freq_beta.ipynb
+++ b/SSVEP/classificador/classifier_per_freq_beta.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -30,13 +30,13 @@
       "Reading c:\\Users\\anaca\\OneDrive\\Documentos\\GitHub\\ssvep\\SSVEP\\classificador\\..\\preprocessing_beta\\beta_epo.fif ...\n",
       "Isotrak not found\n",
       "    Found the data of interest:\n",
-      "        t =       0.00 ...    1462.89 ms\n",
+      "        t =       0.00 ...    2996.00 ms\n",
       "        0 CTF compensation matrices available\n",
       "Not setting metadata\n",
       "160 matching events found\n",
       "No baseline correction applied\n",
       "0 projection items activated\n",
-      "(160, 64, 750)\n"
+      "(160, 54, 750)\n"
      ]
     },
     {
@@ -55,7 +55,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "        <th>Time range</th>\n",
-       "        <td>0.000 – 1.463 s</td>\n",
+       "        <td>0.000 – 2.996 s</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "        <th>Baseline</th>\n",
@@ -64,7 +64,7 @@
        "</table>"
       ],
       "text/plain": [
-       "<EpochsFIF |  160 events (all good), 0 – 1.46289 s, baseline off, ~58.6 MB, data loaded,\n",
+       "<EpochsFIF |  160 events (all good), 0 – 2.996 s, baseline off, ~49.5 MB, data loaded,\n",
        " '8.0': 4\n",
        " '8.2': 4\n",
        " '8.4': 4\n",
@@ -78,7 +78,7 @@
        " and 30 more events ...>"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
      "output_type": "stream",
      "text": [
       "Possíveis alvos: [8.0, 8.2, 8.4, 8.6, 8.799999999999999, 9.0, 9.2, 9.4, 9.6, 9.8, 10.0, 10.2, 10.4, 10.6, 10.8, 11.0, 11.2, 11.4, 11.6, 11.8, 12.0, 12.2, 12.4, 12.600000000000001, 12.8, 13.0, 13.200000000000001, 13.4, 13.600000000000001, 13.8, 14.0, 14.200000000000001, 14.4, 14.600000000000001, 14.8, 15.0, 15.200000000000001, 15.4, 15.600000000000001, 15.8]\n",
-      "Formato dos dados calculados: (160, 40, 1, 64, 13)\n"
+      "Formato dos dados calculados: (160, 40, 1, 54, 31)\n"
      ]
     }
    ],
@@ -109,16 +109,14 @@
     "import numpy as np\n",
     "\n",
     "# TAREFA 3\n",
-    "threshold = 0.5\n",
+    "threshold = 0.1\n",
     "targets = [float(item) for item in data.event_id.keys()]\n",
     "print(\"Possíveis alvos:\", targets)\n",
     "\n",
     "features = list()\n",
     "for i in range(len(data)):\n",
     "    sample = list()\n",
-    "    for target in targets:\n",
-    "        sample.append(data[i].compute_psd(method='multitaper', fmin=7.5,\n",
-    "                                          fmax=16.3, verbose=False))\n",
+    "    sample.append(data[i].compute_psd(method='multitaper', fmin=7, fmax = 17, verbose=False))\n",
     "    features.append(sample)\n",
     "\n",
     "X = np.array(features)\n",
@@ -127,14 +125,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(len(data)):    \n",
+    "    for target in targets:\n",
+    "            fmin = target - threshold\n",
+    "            fmax = target + threshold"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Formato padronizado dos dados com PSD calculado: (160, 40, 64, 13)\n"
+      "Formato padronizado dos dados com PSD calculado: (160, 1, 45, 26)\n"
      ]
     }
    ],
@@ -147,16 +157,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(160, 40, 64)"
+       "(160, 1, 45)"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
