--- a/SSVEP/classificador/classifier_per_freq_beta.ipynb
+++ b/SSVEP/classificador/classifier_per_freq_beta.ipynb
@@ -11,16 +11,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import mne"
+    "import mne\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +37,7 @@
       "160 matching events found\n",
       "No baseline correction applied\n",
       "0 projection items activated\n",
-      "(160, 54, 750)\n"
+      "(160, 10, 750)\n"
      ]
     },
     {
@@ -64,7 +65,7 @@
        "</table>"
       ],
       "text/plain": [
-       "<EpochsFIF |  160 events (all good), 0 – 2.996 s, baseline off, ~49.5 MB, data loaded,\n",
+       "<EpochsFIF |  160 events (all good), 0 – 2.996 s, baseline off, ~9.2 MB, data loaded,\n",
        " '8.0': 4\n",
        " '8.2': 4\n",
        " '8.4': 4\n",
@@ -78,7 +79,7 @@
        " and 30 more events ...>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -93,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -101,154 +102,35 @@
      "output_type": "stream",
      "text": [
       "Possíveis alvos: [8.0, 8.2, 8.4, 8.6, 8.799999999999999, 9.0, 9.2, 9.4, 9.6, 9.8, 10.0, 10.2, 10.4, 10.6, 10.8, 11.0, 11.2, 11.4, 11.6, 11.8, 12.0, 12.2, 12.4, 12.600000000000001, 12.8, 13.0, 13.200000000000001, 13.4, 13.600000000000001, 13.8, 14.0, 14.200000000000001, 14.4, 14.600000000000001, 14.8, 15.0, 15.200000000000001, 15.4, 15.600000000000001, 15.8]\n",
-      "Formato dos dados calculados: (160, 40, 1, 54, 31)\n"
+      "Percentage: 2.5\n"
      ]
     }
    ],
    "source": [
     "import numpy as np\n",
     "\n",
+    "hits = 0\n",
+    "y = np.load(\"../datasets/beta/labels.npy\")\n",
+    "\n",
     "# TAREFA 3\n",
     "threshold = 0.1\n",
     "targets = [float(item) for item in data.event_id.keys()]\n",
     "print(\"Possíveis alvos:\", targets)\n",
     "\n",
-    "features = list()\n",
     "for i in range(len(data)):\n",
-    "    sample = list()\n",
-    "    sample.append(data[i].compute_psd(method='multitaper', fmin=7, fmax = 17, verbose=False))\n",
-    "    features.append(sample)\n",
-    "\n",
-    "X = np.array(features)\n",
-    "print(\"Formato dos dados calculados:\", X.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for i in range(len(data)):    \n",
+    "    view = data[i].compute_psd(method='welch', fmin=7, fmax = 17, verbose=False)\n",
+    "    \n",
     "    for target in targets:\n",
-    "            fmin = target - threshold\n",
-    "            fmax = target + threshold"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Formato padronizado dos dados com PSD calculado: (160, 1, 45, 26)\n"
-     ]
-    }
-   ],
-   "source": [
-    "# organizando os dados\n",
+    "        fmin = target - threshold\n",
+    "        fmax = target + threshold     \n",
+    "        features = view.get_data(fmin=fmin, fmax=fmax)\n",
+    "        X = np.array(features)\n",
+    "        max_frequency = np.max(X, axis=1)\n",
     "\n",
-    "X = X.reshape(X.shape[0], X.shape[1], X.shape[3], X.shape[-1])\n",
-    "print(\"Formato padronizado dos dados com PSD calculado:\", X.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(160, 1, 45)"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# TAREFA 4\n",
+    "        if np.any((max_frequency >= fmin) & (max_frequency <= fmax)):\n",
+    "          hits += 1\n",
     "\n",
-    "# aplicando a característica de \"maior valor\"\n",
-    "max_values = np.max(X, axis=-1)\n",
-    "max_values.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ 8.6  8.8  9.   9.2  9.4  9.6  9.8 10.  10.2 10.4 10.6 10.8 11.  11.2\n",
-      " 11.4 11.6 11.8 12.  12.2 12.4 12.6 12.8 13.  13.2 13.4 13.6 13.8 14.\n",
-      " 14.2 14.4 14.6 14.8 15.  15.2 15.4 15.6 15.8  8.   8.2  8.4  8.6  8.8\n",
-      "  9.   9.2  9.4  9.6  9.8 10.  10.2 10.4 10.6 10.8 11.  11.2 11.4 11.6\n",
-      " 11.8 12.  12.2 12.4 12.6 12.8 13.  13.2 13.4 13.6 13.8 14.  14.2 14.4\n",
-      " 14.6 14.8 15.  15.2 15.4 15.6 15.8  8.   8.2  8.4  8.6  8.8  9.   9.2\n",
-      "  9.4  9.6  9.8 10.  10.2 10.4 10.6 10.8 11.  11.2 11.4 11.6 11.8 12.\n",
-      " 12.2 12.4 12.6 12.8 13.  13.2 13.4 13.6 13.8 14.  14.2 14.4 14.6 14.8\n",
-      " 15.  15.2 15.4 15.6 15.8  8.   8.2  8.4  8.6  8.8  9.   9.2  9.4  9.6\n",
-      "  9.8 10.  10.2 10.4 10.6 10.8 11.  11.2 11.4 11.6 11.8 12.  12.2 12.4\n",
-      " 12.6 12.8 13.  13.2 13.4 13.6 13.8 14.  14.2 14.4 14.6 14.8 15.  15.2\n",
-      " 15.4 15.6 15.8  8.   8.2  8.4] [ 8.   8.2  8.4  8.6  8.8  9.   9.2  9.4  9.6  9.8 10.  10.2 10.4 10.6\n",
-      " 10.8 11.  11.2 11.4 11.6 11.8 12.  12.2 12.4 12.6 12.8 13.  13.2 13.4\n",
-      " 13.6 13.8 14.  14.2 14.4 14.6 14.8 15.  15.2 15.4 15.6 15.8] \n",
-      "\n",
-      "(160, 40) (160,)\n",
-      "[[ 1  1  1 ...  1  1  1]\n",
-      " [51 51 51 ... 51 51 51]\n",
-      " [22 22 22 ... 22 22 22]\n",
-      " ...\n",
-      " [51 51 51 ... 51 51 51]\n",
-      " [33 33 33 ... 33 33 33]\n",
-      " [43 43 43 ... 43 43 43]]\n",
-      "160\n"
-     ]
-    },
-    {
-     "ename": "IndexError",
-     "evalue": "index 51 is out of bounds for axis 0 with size 40",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\anaca\\OneDrive\\Documentos\\GitHub\\ssvep\\SSVEP\\classificador\\classifier_per_freq_beta.ipynb Cell 7\u001b[0m line \u001b[0;36m1\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/anaca/OneDrive/Documentos/GitHub/ssvep/SSVEP/classificador/classifier_per_freq_beta.ipynb#W6sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mlen\u001b[39m(i_max))\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/anaca/OneDrive/Documentos/GitHub/ssvep/SSVEP/classificador/classifier_per_freq_beta.ipynb#W6sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m \u001b[39m# classificação pelo \"voto\" do maior valor\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/anaca/OneDrive/Documentos/GitHub/ssvep/SSVEP/classificador/classifier_per_freq_beta.ipynb#W6sZmlsZQ%3D%3D?line=18'>19</a>\u001b[0m hits \u001b[39m=\u001b[39m [\u001b[39m1\u001b[39;49m \u001b[39mfor\u001b[39;49;00m i \u001b[39min\u001b[39;49;00m \u001b[39mrange\u001b[39;49m(\u001b[39mlen\u001b[39;49m(i_max)) \u001b[39mif\u001b[39;49;00m targets[i_max[i][\u001b[39m0\u001b[39;49m]] \u001b[39m==\u001b[39;49m y[i]]\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/anaca/OneDrive/Documentos/GitHub/ssvep/SSVEP/classificador/classifier_per_freq_beta.ipynb#W6sZmlsZQ%3D%3D?line=19'>20</a>\u001b[0m acc \u001b[39m=\u001b[39m \u001b[39m100\u001b[39m \u001b[39m*\u001b[39m \u001b[39msum\u001b[39m(hits) \u001b[39m/\u001b[39m \u001b[39mlen\u001b[39m(y)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/anaca/OneDrive/Documentos/GitHub/ssvep/SSVEP/classificador/classifier_per_freq_beta.ipynb#W6sZmlsZQ%3D%3D?line=20'>21</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39mPorcentagem de acerto: \u001b[39m\u001b[39m{\u001b[39;00macc\u001b[39m:\u001b[39;00m\u001b[39m.2f\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m%\u001b[39m\u001b[39m'\u001b[39m)\n",
-      "\u001b[1;32mc:\\Users\\anaca\\OneDrive\\Documentos\\GitHub\\ssvep\\SSVEP\\classificador\\classifier_per_freq_beta.ipynb Cell 7\u001b[0m line \u001b[0;36m1\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/anaca/OneDrive/Documentos/GitHub/ssvep/SSVEP/classificador/classifier_per_freq_beta.ipynb#W6sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mlen\u001b[39m(i_max))\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/anaca/OneDrive/Documentos/GitHub/ssvep/SSVEP/classificador/classifier_per_freq_beta.ipynb#W6sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m \u001b[39m# classificação pelo \"voto\" do maior valor\u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/anaca/OneDrive/Documentos/GitHub/ssvep/SSVEP/classificador/classifier_per_freq_beta.ipynb#W6sZmlsZQ%3D%3D?line=18'>19</a>\u001b[0m hits \u001b[39m=\u001b[39m [\u001b[39m1\u001b[39m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(i_max)) \u001b[39mif\u001b[39;00m targets[i_max[i][\u001b[39m0\u001b[39;49m]] \u001b[39m==\u001b[39m y[i]]\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/anaca/OneDrive/Documentos/GitHub/ssvep/SSVEP/classificador/classifier_per_freq_beta.ipynb#W6sZmlsZQ%3D%3D?line=19'>20</a>\u001b[0m acc \u001b[39m=\u001b[39m \u001b[39m100\u001b[39m \u001b[39m*\u001b[39m \u001b[39msum\u001b[39m(hits) \u001b[39m/\u001b[39m \u001b[39mlen\u001b[39m(y)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/anaca/OneDrive/Documentos/GitHub/ssvep/SSVEP/classificador/classifier_per_freq_beta.ipynb#W6sZmlsZQ%3D%3D?line=20'>21</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39mPorcentagem de acerto: \u001b[39m\u001b[39m{\u001b[39;00macc\u001b[39m:\u001b[39;00m\u001b[39m.2f\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m%\u001b[39m\u001b[39m'\u001b[39m)\n",
-      "\u001b[1;31mIndexError\u001b[0m: index 51 is out of bounds for axis 0 with size 40"
-     ]
-    }
-   ],
-   "source": [
-    "# TAREFA 5\n",
-    "\n",
-    "y = np.load(\"../datasets/beta/labels.npy\")\n",
-    "\n",
-    "# entendimento dos dados\n",
-    "print(y, targets, \"\\n\")\n",
-    "\n",
-    "# classificação pelo \"voto\" do maior valor\n",
-    "i_max = max_values.argmax(axis=-1)\n",
-    "\n",
-    "# Verifique as dimensões dos arrays\n",
-    "print(i_max.shape, y.shape)\n",
-    "\n",
-    "print(i_max)\n",
-    "\n",
-    "print(len(i_max))\n",
-    "\n",
-    "# classificação pelo \"voto\" do maior valor\n",
-    "hits = [1 for i in range(len(i_max)) if targets[i_max[i][0]] == y[i]]\n",
-    "acc = 100 * sum(hits) / len(y)\n",
-    "print(f'\\nPorcentagem de acerto: {acc:.2f}%')"
+    "print(f\"Acc: {hits*100/len(y)}\")"
    ]
   },
   {
