add snr (professor)

--- a/SSVEP/ml/beta_ml.ipynb
+++ b/SSVEP/ml/beta_ml.ipynb
@@ -401,6 +401,167 @@
     "calculate_and_plot_fft(tempo2, title=\"FFT - Tempo 0.5 - 2.5 segundos (Sinal SSVEP com Ruído)\")\n",
     "calculate_and_plot_fft(tempo3, title=\"FFT - Tempo 2.5 - 2.996 segundos (Ruído)\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "33687.47367694818"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# SNR\n",
+    "\n",
+    "shape = (160, 64, 750)\n",
+    "# Estimando o ruído de fundo\n",
+    "\n",
+    "# intervalos de tempo sem estímulo (0 a 0,5 segundos e 2,5 a 3 segundos)\n",
+    "base_start = 0\n",
+    "base_end = 125\n",
+    "rest_start = 625\n",
+    "rest_end = 750\n",
+    "\n",
+    "# armazena uma lista com as médias de potência para cada canal\n",
+    "noise_power = []\n",
+    "# consideramos a primeira amostra (1º target, 1º trial)\n",
+    "for channel_data in data[0, :, :]:\n",
+    "    fft_result = np.fft.fft(channel_data)\n",
+    "    # densidade espectral de potência (PSD)\n",
+    "    psd = np.abs(fft_result) ** 2\n",
+    "    # média da potência nos intervalos de tempo sem estímulo\n",
+    "    base_power = np.mean(psd[base_start:base_end])\n",
+    "    rest_power = np.mean(psd[rest_start:rest_end])\n",
+    "    # média das duas médias de potência obtidas anteriormente\n",
+    "    mean_noise_power = (base_power + rest_power) / 2\n",
+    "    noise_power.append(mean_noise_power)\n",
+    "#média das médias de potência de todos os canais para estimar o ruído de fundo\n",
+    "estimated_background_noise = np.mean(noise_power)\n",
+    "estimated_background_noise"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(64, 40)"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from scipy.signal import find_peaks\n",
+    "\n",
+    "sr = 250\n",
+    "\n",
+    "# frequências alvo\n",
+    "target_frequencies = np.arange(8, 16, 0.2)\n",
+    "# lista para armazenar as amplitudes nas frequências alvo\n",
+    "target_amplitudes = []\n",
+    "\n",
+    "for channel_data in data[0, :, :]:\n",
+    "    fft_result = np.fft.fft(channel_data)\n",
+    "    psd = np.abs(fft_result) ** 2\n",
+    "    frequencies = np.fft.fftfreq(len(fft_result), 1 / sr)\n",
+    "    target_amplitudes_trial = []\n",
+    "    for target_frequency in target_frequencies:\n",
+    "        # encontrando o índice da frequência alvo no espectro de frequência\n",
+    "        index = np.argmin(np.abs(frequencies - target_frequency))\n",
+    "        # amplitude na frequência alvo\n",
+    "        amplitude = np.sqrt(psd[index])\n",
+    "        target_amplitudes_trial.append(amplitude)\n",
+    "    target_amplitudes.append(target_amplitudes_trial)\n",
+    "target_amplitudes = np.array(target_amplitudes)\n",
+    "target_amplitudes.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[23.46034994 28.16685606 28.16685606 ... 21.35672034 22.88331328\n",
+      "  22.88331328]\n",
+      " [26.04451484 27.9478496  27.9478496  ... 22.61829993 20.32254394\n",
+      "  20.32254394]\n",
+      " [27.06419848 28.4046884  28.4046884  ... 19.7737969  20.64263359\n",
+      "  20.64263359]\n",
+      " ...\n",
+      " [25.80376448 25.70740589 25.70740589 ... 22.40979624 21.51758976\n",
+      "  21.51758976]\n",
+      " [25.94264003 23.83910735 23.83910735 ... 20.46448863 13.44300979\n",
+      "  13.44300979]\n",
+      " [27.74483325 26.99020569 26.99020569 ... 23.38200201 18.92015925\n",
+      "  18.92015925]]\n",
+      "(64, 40)\n",
+      "[[-35.22903693 -30.52253082 -30.52253082 ... -37.33266653 -35.80607359\n",
+      "  -35.80607359]\n",
+      " [-32.64487203 -30.74153727 -30.74153727 ... -36.07108694 -38.36684294\n",
+      "  -38.36684294]\n",
+      " [-31.62518839 -30.28469847 -30.28469847 ... -38.91558997 -38.04675328\n",
+      "  -38.04675328]\n",
+      " ...\n",
+      " [-32.88562239 -32.98198098 -32.98198098 ... -36.27959064 -37.17179711\n",
+      "  -37.17179711]\n",
+      " [-32.74674685 -34.85027952 -34.85027952 ... -38.22489824 -45.24637708\n",
+      "  -45.24637708]\n",
+      " [-30.94455362 -31.69918118 -31.69918118 ... -35.30738486 -39.76922762\n",
+      "  -39.76922762]]\n",
+      "(64, 40)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\anaca\\AppData\\Local\\Temp\\ipykernel_8084\\2117311641.py:6: RuntimeWarning: invalid value encountered in log10\n",
+      "  narrow_band_SNR = 10 * np.log10(target_amplitudes_adjusted / estimated_background_noise)\n",
+      "C:\\Users\\anaca\\AppData\\Local\\Temp\\ipykernel_8084\\2117311641.py:11: RuntimeWarning: invalid value encountered in log10\n",
+      "  wide_band_SNR = 10 * np.log10(target_amplitudes_adjusted / total_power)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# forçando (estragando) valor de \"estimated_background_noise\" para não sobrar valores negativos\n",
+    "estimated_background_noise = 1.\n",
+    "target_amplitudes_adjusted = target_amplitudes - estimated_background_noise\n",
+    "\n",
+    "# subtraindo o ruído de fundo das amplitudes\n",
+    "narrow_band_SNR = 10 * np.log10(target_amplitudes_adjusted / estimated_background_noise)\n",
+    "print(narrow_band_SNR)\n",
+    "print(narrow_band_SNR.shape)\n",
+    "\n",
+    "total_power = np.sum(target_amplitudes_adjusted)\n",
+    "wide_band_SNR = 10 * np.log10(target_amplitudes_adjusted / total_power)\n",
+    "print(wide_band_SNR)\n",
+    "print(wide_band_SNR.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
