--- a/SSVEP/ml/beta_ml.ipynb
+++ b/SSVEP/ml/beta_ml.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -171,23 +171,23 @@
       "[Parallel(n_jobs=1)]: Done 287 tasks      | elapsed:    0.0s\n",
       "[Parallel(n_jobs=1)]: Done 449 tasks      | elapsed:    0.0s\n",
       "[Parallel(n_jobs=1)]: Done 647 tasks      | elapsed:    0.1s\n",
-      "[Parallel(n_jobs=1)]: Done 881 tasks      | elapsed:    0.1s\n",
-      "[Parallel(n_jobs=1)]: Done 1151 tasks      | elapsed:    0.1s\n",
-      "[Parallel(n_jobs=1)]: Done 1457 tasks      | elapsed:    0.2s\n",
-      "[Parallel(n_jobs=1)]: Done 1799 tasks      | elapsed:    0.3s\n",
-      "[Parallel(n_jobs=1)]: Done 2177 tasks      | elapsed:    0.3s\n",
-      "[Parallel(n_jobs=1)]: Done 2591 tasks      | elapsed:    0.4s\n",
-      "[Parallel(n_jobs=1)]: Done 3041 tasks      | elapsed:    0.5s\n",
-      "[Parallel(n_jobs=1)]: Done 3527 tasks      | elapsed:    0.6s\n",
-      "[Parallel(n_jobs=1)]: Done 4049 tasks      | elapsed:    0.7s\n",
-      "[Parallel(n_jobs=1)]: Done 4607 tasks      | elapsed:    0.8s\n",
-      "[Parallel(n_jobs=1)]: Done 5201 tasks      | elapsed:    0.9s\n",
-      "[Parallel(n_jobs=1)]: Done 5831 tasks      | elapsed:    1.1s\n",
-      "[Parallel(n_jobs=1)]: Done 6497 tasks      | elapsed:    1.2s\n",
-      "[Parallel(n_jobs=1)]: Done 7199 tasks      | elapsed:    1.3s\n",
-      "[Parallel(n_jobs=1)]: Done 7937 tasks      | elapsed:    1.5s\n",
-      "[Parallel(n_jobs=1)]: Done 8711 tasks      | elapsed:    1.6s\n",
-      "[Parallel(n_jobs=1)]: Done 9521 tasks      | elapsed:    1.8s\n"
+      "[Parallel(n_jobs=1)]: Done 881 tasks      | elapsed:    0.3s\n",
+      "[Parallel(n_jobs=1)]: Done 1151 tasks      | elapsed:    0.4s\n",
+      "[Parallel(n_jobs=1)]: Done 1457 tasks      | elapsed:    0.5s\n",
+      "[Parallel(n_jobs=1)]: Done 1799 tasks      | elapsed:    0.6s\n",
+      "[Parallel(n_jobs=1)]: Done 2177 tasks      | elapsed:    0.7s\n",
+      "[Parallel(n_jobs=1)]: Done 2591 tasks      | elapsed:    0.8s\n",
+      "[Parallel(n_jobs=1)]: Done 3041 tasks      | elapsed:    0.9s\n",
+      "[Parallel(n_jobs=1)]: Done 3527 tasks      | elapsed:    1.1s\n",
+      "[Parallel(n_jobs=1)]: Done 4049 tasks      | elapsed:    1.3s\n",
+      "[Parallel(n_jobs=1)]: Done 4607 tasks      | elapsed:    1.4s\n",
+      "[Parallel(n_jobs=1)]: Done 5201 tasks      | elapsed:    1.6s\n",
+      "[Parallel(n_jobs=1)]: Done 5831 tasks      | elapsed:    1.8s\n",
+      "[Parallel(n_jobs=1)]: Done 6497 tasks      | elapsed:    2.0s\n",
+      "[Parallel(n_jobs=1)]: Done 7199 tasks      | elapsed:    2.2s\n",
+      "[Parallel(n_jobs=1)]: Done 7937 tasks      | elapsed:    2.5s\n",
+      "[Parallel(n_jobs=1)]: Done 8711 tasks      | elapsed:    2.7s\n",
+      "[Parallel(n_jobs=1)]: Done 9521 tasks      | elapsed:    2.9s\n"
      ]
     },
     {
@@ -229,7 +229,7 @@
        " and 30 more events ...>"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +413,7 @@
        "33687.47367694818"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -421,7 +421,7 @@
    "source": [
     "# SNR\n",
     "\n",
-    "shape = (160, 64, 750)\n",
+    "shape = data.shape\n",
     "# Estimando o ruído de fundo\n",
     "\n",
     "# intervalos de tempo sem estímulo (0 a 0,5 segundos e 2,5 a 3 segundos)\n",
@@ -450,16 +450,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(64, 40)"
+       "(160, 64, 40)"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -469,73 +469,217 @@
     "\n",
     "sr = 250\n",
     "\n",
-    "# frequências alvo\n",
+    "# Frequências alvo\n",
     "target_frequencies = np.arange(8, 16, 0.2)\n",
-    "# lista para armazenar as amplitudes nas frequências alvo\n",
-    "target_amplitudes = []\n",
+    "# Lista para armazenar as amplitudes nas frequências alvo\n",
+    "target_amplitudes = np.zeros((160, 64, len(target_frequencies)))\n",
     "\n",
-    "for channel_data in data[0, :, :]:\n",
-    "    fft_result = np.fft.fft(channel_data)\n",
-    "    psd = np.abs(fft_result) ** 2\n",
-    "    frequencies = np.fft.fftfreq(len(fft_result), 1 / sr)\n",
-    "    target_amplitudes_trial = []\n",
-    "    for target_frequency in target_frequencies:\n",
-    "        # encontrando o índice da frequência alvo no espectro de frequência\n",
-    "        index = np.argmin(np.abs(frequencies - target_frequency))\n",
-    "        # amplitude na frequência alvo\n",
-    "        amplitude = np.sqrt(psd[index])\n",
-    "        target_amplitudes_trial.append(amplitude)\n",
-    "    target_amplitudes.append(target_amplitudes_trial)\n",
+    "for i in range(160):\n",
+    "    for j in range(64):\n",
+    "        fft_result = np.fft.fft(data[i, j, :])\n",
+    "        psd = np.abs(fft_result) ** 2\n",
+    "        frequencies = np.fft.fftfreq(len(fft_result), 1 / sr)\n",
+    "        for target_frequency_idx, target_frequency in enumerate(target_frequencies):\n",
+    "            # Encontrando o índice da frequência alvo no espectro de frequência\n",
+    "            index = np.argmin(np.abs(frequencies - target_frequency))\n",
+    "            # Amplitude na frequência alvo\n",
+    "            amplitude = np.sqrt(psd[index])\n",
+    "            target_amplitudes[i, j, target_frequency_idx] = amplitude\n",
+    "\n",
     "target_amplitudes = np.array(target_amplitudes)\n",
     "target_amplitudes.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[23.46034994 28.16685606 28.16685606 ... 21.35672034 22.88331328\n",
-      "  22.88331328]\n",
-      " [26.04451484 27.9478496  27.9478496  ... 22.61829993 20.32254394\n",
-      "  20.32254394]\n",
-      " [27.06419848 28.4046884  28.4046884  ... 19.7737969  20.64263359\n",
-      "  20.64263359]\n",
+      "[[[23.46034994 28.16685606 28.16685606 ... 21.35672034 22.88331328\n",
+      "   22.88331328]\n",
+      "  [26.04451484 27.9478496  27.9478496  ... 22.61829993 20.32254394\n",
+      "   20.32254394]\n",
+      "  [27.06419848 28.4046884  28.4046884  ... 19.7737969  20.64263359\n",
+      "   20.64263359]\n",
+      "  ...\n",
+      "  [25.80376448 25.70740589 25.70740589 ... 22.40979624 21.51758976\n",
+      "   21.51758976]\n",
+      "  [25.94264003 23.83910735 23.83910735 ... 20.46448863 13.44300979\n",
+      "   13.44300979]\n",
+      "  [27.74483325 26.99020569 26.99020569 ... 23.38200201 18.92015925\n",
+      "   18.92015925]]\n",
+      "\n",
+      " [[24.38522232 28.16597086 28.16597086 ... 23.32511649 18.57246514\n",
+      "   18.57246514]\n",
+      "  [25.44397869 27.12405338 27.12405338 ... 23.75253765 21.10978318\n",
+      "   21.10978318]\n",
+      "  [26.01501469 27.17271738 27.17271738 ... 23.75269346 21.2959109\n",
+      "   21.2959109 ]\n",
+      "  ...\n",
+      "  [26.73908879 27.43003776 27.43003776 ... 26.0421908  25.76164252\n",
+      "   25.76164252]\n",
+      "  [25.50486449 26.06647598 26.06647598 ... 23.15471131 24.21717472\n",
+      "   24.21717472]\n",
+      "  [27.64524456 27.81393003 27.81393003 ... 25.68112037 25.24684663\n",
+      "   25.24684663]]\n",
+      "\n",
+      " [[17.01215983 23.28045926 23.28045926 ... 23.24690613 19.32951543\n",
+      "   19.32951543]\n",
+      "  [22.19011967 21.69306317 21.69306317 ... 22.39576141 18.84911588\n",
+      "   18.84911588]\n",
+      "  [25.53731153 23.40044111 23.40044111 ... 20.19364578 22.48850627\n",
+      "   22.48850627]\n",
+      "  ...\n",
+      "  [23.31081701 21.18533128 21.18533128 ... 20.03112297 27.50274209\n",
+      "   27.50274209]\n",
+      "  [23.75125221 20.42256347 20.42256347 ... 21.0596579  27.6902164\n",
+      "   27.6902164 ]\n",
+      "  [22.54205057 24.51614503 24.51614503 ... 22.32684481 28.23801286\n",
+      "   28.23801286]]\n",
+      "\n",
       " ...\n",
-      " [25.80376448 25.70740589 25.70740589 ... 22.40979624 21.51758976\n",
-      "  21.51758976]\n",
-      " [25.94264003 23.83910735 23.83910735 ... 20.46448863 13.44300979\n",
-      "  13.44300979]\n",
-      " [27.74483325 26.99020569 26.99020569 ... 23.38200201 18.92015925\n",
-      "  18.92015925]]\n",
-      "(64, 40)\n",
-      "[[-35.22903693 -30.52253082 -30.52253082 ... -37.33266653 -35.80607359\n",
-      "  -35.80607359]\n",
-      " [-32.64487203 -30.74153727 -30.74153727 ... -36.07108694 -38.36684294\n",
-      "  -38.36684294]\n",
-      " [-31.62518839 -30.28469847 -30.28469847 ... -38.91558997 -38.04675328\n",
-      "  -38.04675328]\n",
+      "\n",
+      " [[25.76471855 25.24770238 25.24770238 ... 22.66345852 22.45377721\n",
+      "   22.45377721]\n",
+      "  [25.22620931 26.20073428 26.20073428 ... 23.11472255 22.36119373\n",
+      "   22.36119373]\n",
+      "  [25.03697812 26.62771674 26.62771674 ... 23.39998946 21.28753592\n",
+      "   21.28753592]\n",
+      "  ...\n",
+      "  [29.05536729 23.12768385 23.12768385 ... 18.47742003 25.25517059\n",
+      "   25.25517059]\n",
+      "  [27.56082555 20.95628461 20.95628461 ... 13.37994866 24.6646427\n",
+      "   24.6646427 ]\n",
+      "  [29.61730442 23.94129266 23.94129266 ... 20.43905151 26.80566023\n",
+      "   26.80566023]]\n",
+      "\n",
+      " [[24.47147489 25.30345945 25.30345945 ... 25.11747486 24.5396362\n",
+      "   24.5396362 ]\n",
+      "  [24.26435606 24.89906249 24.89906249 ... 24.45663905 24.5335063\n",
+      "   24.5335063 ]\n",
+      "  [25.42134762 24.89181188 24.89181188 ... 23.74467543 23.44971684\n",
+      "   23.44971684]\n",
+      "  ...\n",
+      "  [24.3235957  28.15263446 28.15263446 ... 25.71655179 20.16299976\n",
+      "   20.16299976]\n",
+      "  [14.58957295 26.11242094 26.11242094 ... 23.66584495 21.73554428\n",
+      "   21.73554428]\n",
+      "  [25.87219942 29.15532362 29.15532362 ... 24.38961871 24.7784434\n",
+      "   24.7784434 ]]\n",
+      "\n",
+      " [[25.23710116 20.11640246 20.11640246 ... 23.86856374 19.48166172\n",
+      "   19.48166172]\n",
+      "  [24.45534517 23.10807018 23.10807018 ... 23.68689395 12.3133581\n",
+      "   12.3133581 ]\n",
+      "  [23.51669214 24.20796527 24.20796527 ... 23.38677179 15.03717343\n",
+      "   15.03717343]\n",
+      "  ...\n",
+      "  [25.55881072 26.32417124 26.32417124 ... 23.18923313 21.68679627\n",
+      "   21.68679627]\n",
+      "  [25.05624256 22.17531322 22.17531322 ... 23.64798829 21.97160182\n",
+      "   21.97160182]\n",
+      "  [25.61928873 25.86223781 25.86223781 ... 22.59142151 21.999678\n",
+      "   21.999678  ]]]\n",
+      "(160, 64, 40)\n",
+      "[[[-57.24252443 -52.53601831 -52.53601831 ... -59.34615403 -57.81956109\n",
+      "   -57.81956109]\n",
+      "  [-54.65835953 -52.75502477 -52.75502477 ... -58.08457444 -60.38033043\n",
+      "   -60.38033043]\n",
+      "  [-53.63867588 -52.29818597 -52.29818597 ... -60.92907747 -60.06024078\n",
+      "   -60.06024078]\n",
+      "  ...\n",
+      "  [-54.89910989 -54.99546848 -54.99546848 ... -58.29307813 -59.18528461\n",
+      "   -59.18528461]\n",
+      "  [-54.76023434 -56.86376702 -56.86376702 ... -60.23838574 -67.25986458\n",
+      "   -67.25986458]\n",
+      "  [-52.95804112 -53.71266868 -53.71266868 ... -57.32087236 -61.78271512\n",
+      "   -61.78271512]]\n",
+      "\n",
+      " [[-56.31765205 -52.53690351 -52.53690351 ... -57.37775788 -62.13040923\n",
+      "   -62.13040923]\n",
+      "  [-55.25889568 -53.57882099 -53.57882099 ... -56.95033672 -59.59309118\n",
+      "   -59.59309118]\n",
+      "  [-54.68785968 -53.53015699 -53.53015699 ... -56.95018091 -59.40696347\n",
+      "   -59.40696347]\n",
+      "  ...\n",
+      "  [-53.96378557 -53.27283661 -53.27283661 ... -54.66068357 -54.94123185\n",
+      "   -54.94123185]\n",
+      "  [-55.19800988 -54.63639839 -54.63639839 ... -57.54816306 -56.48569965\n",
+      "   -56.48569965]\n",
+      "  [-53.0576298  -52.88894434 -52.88894434 ... -55.021754   -55.45602774\n",
+      "   -55.45602774]]\n",
+      "\n",
+      " [[-63.69071454 -57.42241511 -57.42241511 ... -57.45596824 -61.37335893\n",
+      "   -61.37335893]\n",
+      "  [-58.5127547  -59.0098112  -59.0098112  ... -58.30711296 -61.85375849\n",
+      "   -61.85375849]\n",
+      "  [-55.16556284 -57.30243326 -57.30243326 ... -60.50922859 -58.2143681\n",
+      "   -58.2143681 ]\n",
+      "  ...\n",
+      "  [-57.39205736 -59.51754309 -59.51754309 ... -60.67175139 -53.20013228\n",
+      "   -53.20013228]\n",
+      "  [-56.95162216 -60.2803109  -60.2803109  ... -59.64321647 -53.01265797\n",
+      "   -53.01265797]\n",
+      "  [-58.1608238  -56.18672934 -56.18672934 ... -58.37602956 -52.46486151\n",
+      "   -52.46486151]]\n",
+      "\n",
       " ...\n",
-      " [-32.88562239 -32.98198098 -32.98198098 ... -36.27959064 -37.17179711\n",
-      "  -37.17179711]\n",
-      " [-32.74674685 -34.85027952 -34.85027952 ... -38.22489824 -45.24637708\n",
-      "  -45.24637708]\n",
-      " [-30.94455362 -31.69918118 -31.69918118 ... -35.30738486 -39.76922762\n",
-      "  -39.76922762]]\n",
-      "(64, 40)\n"
+      "\n",
+      " [[-54.93815582 -55.45517199 -55.45517199 ... -58.03941585 -58.24909716\n",
+      "   -58.24909716]\n",
+      "  [-55.47666506 -54.50214008 -54.50214008 ... -57.58815181 -58.34168064\n",
+      "   -58.34168064]\n",
+      "  [-55.66589625 -54.07515763 -54.07515763 ... -57.30288491 -59.41533844\n",
+      "   -59.41533844]\n",
+      "  ...\n",
+      "  [-51.64750708 -57.57519052 -57.57519052 ... -62.22545434 -55.44770378\n",
+      "   -55.44770378]\n",
+      "  [-53.14204882 -59.74658976 -59.74658976 ... -67.32292571 -56.03823167\n",
+      "   -56.03823167]\n",
+      "  [-51.08556994 -56.76158171 -56.76158171 ... -60.26382286 -53.89721413\n",
+      "   -53.89721413]]\n",
+      "\n",
+      " [[-56.23139948 -55.39941492 -55.39941492 ... -55.58539951 -56.16323817\n",
+      "   -56.16323817]\n",
+      "  [-56.43851831 -55.80381188 -55.80381188 ... -56.24623532 -56.16936807\n",
+      "   -56.16936807]\n",
+      "  [-55.28152675 -55.81106249 -55.81106249 ... -56.95819893 -57.25315752\n",
+      "   -57.25315752]\n",
+      "  ...\n",
+      "  [-56.37927867 -52.55023991 -52.55023991 ... -54.98632258 -60.53987461\n",
+      "   -60.53987461]\n",
+      "  [-66.11330142 -54.59045343 -54.59045343 ... -57.03702941 -58.96733009\n",
+      "   -58.96733009]\n",
+      "  [-54.83067495 -51.54755075 -51.54755075 ... -56.31325566 -55.92443096\n",
+      "   -55.92443096]]\n",
+      "\n",
+      " [[-55.4657732  -60.58647191 -60.58647191 ... -56.83431063 -61.22121265\n",
+      "   -61.22121265]\n",
+      "  [-56.2475292  -57.59480419 -57.59480419 ... -57.01598042 -68.38951626\n",
+      "   -68.38951626]\n",
+      "  [-57.18618223 -56.4949091  -56.4949091  ... -57.31610258 -65.66570094\n",
+      "   -65.66570094]\n",
+      "  ...\n",
+      "  [-55.14406365 -54.37870313 -54.37870313 ... -57.51364124 -59.0160781\n",
+      "   -59.0160781 ]\n",
+      "  [-55.64663181 -58.52756115 -58.52756115 ... -57.05488608 -58.73127255\n",
+      "   -58.73127255]\n",
+      "  [-55.08358564 -54.84063656 -54.84063656 ... -58.11145286 -58.70319636\n",
+      "   -58.70319636]]]\n",
+      "(160, 64, 40)\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\anaca\\AppData\\Local\\Temp\\ipykernel_8084\\2117311641.py:6: RuntimeWarning: invalid value encountered in log10\n",
+      "C:\\Users\\anaca\\AppData\\Local\\Temp\\ipykernel_17628\\2117311641.py:6: RuntimeWarning: invalid value encountered in log10\n",
       "  narrow_band_SNR = 10 * np.log10(target_amplitudes_adjusted / estimated_background_noise)\n",
-      "C:\\Users\\anaca\\AppData\\Local\\Temp\\ipykernel_8084\\2117311641.py:11: RuntimeWarning: invalid value encountered in log10\n",
+      "C:\\Users\\anaca\\AppData\\Local\\Temp\\ipykernel_17628\\2117311641.py:11: RuntimeWarning: invalid value encountered in log10\n",
       "  wide_band_SNR = 10 * np.log10(target_amplitudes_adjusted / total_power)\n"
      ]
     }
